fix(ags): bar not showing and gaps

--- a/modules/nixos/desktop/addons/ags/config/style.css
+++ b/modules/nixos/desktop/addons/ags/config/style.css
@@ -1,5 +1,34 @@
 * {
+  all: unset;
   font-family: 'Iosevka Nerd Font';
-  font-size: 15px;
+  font-size: 12px;
+  color: #151515;
+}
+
+.panel-button {
+  background-color: #F5EEE6;
+  border: 1px solid #161616;
+  border-radius: 12px;
+} 
+
+.panel-button:hover {
+  background-color: #ddd6cf;
+}
+
+.workspaces * {
+  margin: 0 4px;
+  padding: 0px 8px;
+  border-radius: 6px;
+  border: 2px solid transparent;
+}
+
+.workspaces .occupied {
+  background: #ddd6cf;
+}
+
+.workspaces .active {
+  background: #C04364;
+  color: #fff;
+  border: 2px solid #161616
 }
 
